# bf-pprl-attack

./: .gitignore  LICENSE  README.md  compute_optimal_k.py  generate_bf.py  perform_attack.py  pyproject.toml
data/: german-names.csv
pprl/: bloom.py
