[tool.poetry]
name = "bf-pprl-attack"
version = "0.1.0"
description = ""
authors = ["Maximilian Jugl <owlspace@posteo.de>"]
readme = "README.md"
packages = [{include = "bf_pprl_attack"}]

[tool.poetry.dependencies]
python = "^3.10"
bitarray = "^2.6.0"
numpy = "^1.23.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
